set01/problem09_compile_errors.txt
Compilation started at 10/31/2023, 11:53:04 AM
Compilation finished at 10/31/2023, 11:53:05 AM
Compilation started at 10/31/2023, 11:53:23 AM
Compilation finished at 10/31/2023, 11:53:23 AM
Compilation started at 10/31/2023, 11:57:09 AM
Compilation finished at 10/31/2023, 11:57:09 AM
Compilation started at 11/2/2023, 4:25:50 PM
Compilation finished at 11/2/2023, 4:25:51 PM
Compilation started at 11/2/2023, 4:38:22 PM
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set01\problem09.c: In function 'square_root':
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set01\problem09.c:21:13: error: 'n' redeclared as different kind of symbol
     float i,n;
             ^
c:\Users\DELL\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-BALAJIMALI\set01\problem09.c:19:25: note: previous definition of 'n' was here
 float square_root(float n)
                         ^
Compilation finished at 11/2/2023, 4:38:22 PM
Compilation started at 11/2/2023, 4:39:45 PM
Compilation finished at 11/2/2023, 4:39:46 PM
Compilation started at 11/2/2023, 4:41:09 PM
Compilation finished at 11/2/2023, 4:41:10 PM
Compilation started at 11/6/2023, 9:52:59 AM
Compilation finished at 11/6/2023, 9:53:00 AM
Compilation started at 11/16/2023, 4:07:43 PM
Compilation finished at 11/16/2023, 4:07:43 PM
Compilation started at 11/16/2023, 4:08:07 PM
Compilation finished at 11/16/2023, 4:08:07 PM
Compilation started at 11/20/2023, 10:27:46 AM
Compilation finished at 11/20/2023, 10:27:47 AM
Compilation started at 11/20/2023, 10:28:16 AM
Compilation finished at 11/20/2023, 10:28:16 AM
Compilation started at 11/26/2023, 6:50:55 PM
Compilation finished at 11/26/2023, 6:50:56 PM
Compilation started at 12/11/2023, 7:23:25 PM
Compilation finished at 12/11/2023, 7:23:26 PM
